feat: Modernize API with camelCase, Spring AI, and Spring Security
1. Convert all API payloads to camelCase:
   - Remove @JsonProperty annotations from domain objects
   - Update MarketContext, AiAssessment, TradingViewWebhook to use camelCase
   - Update WebhookController responses to use camelCase fields
   - Update ClaudeConfig prompt template to expect camelCase

2. Upgrade Pine Script to version 6:
   - Update docs/PINE_SCRIPT_EXAMPLE.pine from v5 to v6
   - Update webhook JSON in Pine Script to use camelCase

3. Integrate Spring AI for Claude API:
   - Add Spring AI dependencies (spring-ai-anthropic)
   - Create SpringAiConfig with AnthropicChatModel and ChatClient beans
   - Refactor AiAnalysisService to use Spring AI ChatClient
   - Remove manual WebClient HTTP calls and JSON parsing
   - Apply Java 21 patterns (var, final, List.of())

4. Add Spring Security for API authentication:
   - Add spring-boot-starter-security dependency
   - Create SecurityConfig with API key authentication filter
   - Protect /api/webhook/* endpoints (except /health)
   - Add webhook.api.key configuration to application.yml
   - Support API key via X-API-Key header or apiKey query parameter